tests/NormalTests/paczka1/fuzzy1/32604626.err
Error in line 2: S370 S370 28,3
Error in line 3: S370 S969 8,6
Error in line 21: rY5hXtoX S184 209,56
Error in line 18: S370 S184 41,9
Error in line 19: TLHo6mX S184 87,6
Error in line 9: rY5hXtoX S184 52,4
Error in line 27: rY5hXtoX S899 93,1
Error in line 23: 1jUzKHGI S184 17,0
Error in line 14: dcMu28PkJ9 S184 252,7
Error in line 25: TLHo6mX S370 70,7
Error in line 34: TLHo6mX S184 0,6
